fixes overflowing title text when a modal is minimized

--- a/localhost.css
+++ b/localhost.css
@@ -103,7 +103,6 @@ body{border-style:none;height:100%;margin:0;padding:0;width:100%}
 #spaces #tray li{box-shadow:0.15em 0.15em 0.5em #ccc;display:inline-block;margin:1em 1.5em 0}
 #spaces #tray .box{box-shadow:none;position:static}
 #spaces #tray .border{border-style:none;padding:0}
-#spaces #tray h2{width:20em}
 #spaces #tray h2 button{border-style:solid}
 
 /* modal */
